POWR-1432 Initial changes to field help text and views

--- a/web/sites/default/config/pathauto.pattern.policy_category.yml
+++ b/web/sites/default/config/pathauto.pattern.policy_category.yml
@@ -8,16 +8,16 @@ dependencies:
 id: policy_category
 label: 'Policy category'
 type: 'canonical_entities:taxonomy_term'
-pattern: 'policy/[term:name]'
+pattern: 'policies/[term:parent:field_category_abbreviation]/[term:field_category_abbreviation]'
 selection_criteria:
-  e9c88d5a-7104-4bb8-87cf-bcc2f15a9c3e:
+  80e73dde-c569-4ea1-94af-9ea334780204:
     id: 'entity_bundle:taxonomy_term'
     bundles:
       policy_category: policy_category
     negate: false
     context_mapping:
       taxonomy_term: taxonomy_term
-    uuid: e9c88d5a-7104-4bb8-87cf-bcc2f15a9c3e
+    uuid: 80e73dde-c569-4ea1-94af-9ea334780204
 selection_logic: and
 weight: -2
 relationships: {  }
