--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -21,6 +21,7 @@ dependencies:
     - field.storage.node.field_community_actions
     - field.storage.node.field_end_date
     - field.storage.node.field_end_time
+    - field.storage.node.field_policy_category
     - field.storage.node.field_popular
     - field.storage.node.field_published_on
     - field.storage.node.field_search_keywords
@@ -168,6 +169,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.group.field_official_title
+  field_policy_category:
+    label: 'Policy category'
+    datasource_id: 'entity:node'
+    property_path: field_policy_category
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_policy_category
   field_popular:
     label: Popular
     datasource_id: 'entity:node'
@@ -401,6 +410,7 @@ processor_settings:
       - content_title
       - field_official_organization_name
       - field_official_title
+      - field_policy_category
       - field_search_keywords
       - field_shortname_or_acronym
       - field_summary
