--- a/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-2.yml
+++ b/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-2.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - page_manager.page.taxonomy_term_page
-    - views.view.content_by_taxonomy
+    - views.view.portland_policies_by_category
   module:
     - ctools
     - panels
@@ -23,16 +23,16 @@ variant_settings:
       weight: 0
       uuid: 062a6eae-f646-4208-b9bb-0753e3820b3b
       context_mapping: {  }
-    c91a5961-6648-4c45-b18f-e8970e490ad8:
-      id: 'views_block:content_by_taxonomy-block_policy_by_taxonomy'
+    f007c256-28f1-4708-8ae9-e54e7e5ef3d0:
+      id: 'views_block:portland_policies_by_category-block_1'
       label: ''
       provider: views
       label_display: '0'
       views_label: ''
       items_per_page: none
       region: content
-      weight: 1
-      uuid: c91a5961-6648-4c45-b18f-e8970e490ad8
+      weight: 0
+      uuid: f007c256-28f1-4708-8ae9-e54e7e5ef3d0
       context_mapping: {  }
   id: panels_variant
   uuid: ea8c9983-0733-4ed7-a3dc-ecd97ca5adef
