--- a/web/sites/default/config/pathauto.pattern.policy.yml
+++ b/web/sites/default/config/pathauto.pattern.policy.yml
@@ -5,18 +5,18 @@ dependencies:
   module:
     - node
 id: policy
-label: Policy
+label: 'Portland Policy Document'
 type: 'canonical_entities:node'
-pattern: 'policy/[node:field_policy_category:entity:parent]/[node:field_policy_category]/[node:title]'
+pattern: 'policies/[node:field_policy_category:entity:parent:field_category_abbreviation]/[node:field_policy_category:entity:field_category_abbreviation]/[node:field_policy_number]'
 selection_criteria:
-  40c66391-197a-434d-a53d-2c8233809889:
+  e6a64192-7195-4554-90c2-02d6e653c714:
     id: node_type
     bundles:
       policy: policy
     negate: false
     context_mapping:
       node: node
-    uuid: 40c66391-197a-434d-a53d-2c8233809889
+    uuid: e6a64192-7195-4554-90c2-02d6e653c714
 selection_logic: and
 weight: -4
 relationships: {  }
