--- a/web/sites/default/config/views.view.portland_policy_category_index.yml
+++ b/web/sites/default/config/views.view.portland_policy_category_index.yml
@@ -1,20 +1,19 @@
-uuid: 070f0dde-84e0-405e-ae2c-a297784730ca
+uuid: d1dba982-3e47-4e2a-8eaf-6b54bddfbb39
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
-    - node.type.policy
+    - taxonomy.vocabulary.policy_category
   module:
-    - node
+    - taxonomy
     - user
-id: policy
-label: Policy
+id: portland_policy_category_index
+label: 'Portland Policy Category Index'
 module: views
 description: ''
 tag: ''
-base_table: node_field_data
-base_field: nid
+base_table: taxonomy_term_field_data
+base_field: tid
 core: 8.x
 display:
   default:
@@ -49,67 +48,67 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: mini
+        type: none
         options:
-          items_per_page: 20
+          items_per_page: null
           offset: 0
-          id: 0
-          total_pages: null
-          expose:
-            items_per_page: false
-            items_per_page_label: 'Items per page'
-            items_per_page_options: '5, 10, 25, 50'
-            items_per_page_options_all: false
-            items_per_page_options_all_label: '- All -'
-            offset: false
-            offset_label: Offset
-          tags:
-            previous: ‹‹
-            next: ››
       style:
         type: default
       row:
-        type: 'entity:node'
-        options:
-          view_mode: teaser
+        type: fields
       fields:
-        title:
-          id: title
-          table: node_field_data
-          field: title
-          entity_type: node
-          entity_field: title
-          label: ''
-          alter:
-            alter_text: false
-            make_link: false
-            absolute: false
-            trim: false
-            word_boundary: false
-            ellipsis: false
-            strip_tags: false
-            html: false
-          hide_empty: false
-          empty_zero: false
-          settings:
-            link_to_entity: true
-          plugin_id: field
+        name:
+          id: name
+          table: taxonomy_term_field_data
+          field: name
           relationship: none
           group_type: group
           admin_label: ''
+          label: ''
           exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: false
+            ellipsis: false
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
           element_type: ''
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: true
+          element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
           empty: ''
+          hide_empty: false
+          empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
           type: string
+          settings:
+            link_to_entity: true
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -120,55 +119,49 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+          convert_spaces: false
+          entity_type: taxonomy_term
+          entity_field: name
+          plugin_id: term_name
       filters:
-        status:
-          value: '1'
-          table: node_field_data
-          field: status
-          plugin_id: boolean
-          entity_type: node
-          entity_field: status
-          id: status
-          expose:
-            operator: ''
-          group: 1
-        type:
-          id: type
-          table: node_field_data
-          field: type
+        vid:
+          id: vid
+          table: taxonomy_term_field_data
+          field: vid
           value:
-            policy: policy
-          entity_type: node
-          entity_field: type
+            policy_category: policy_category
+          entity_type: taxonomy_term
+          entity_field: vid
           plugin_id: bundle
-        title:
-          id: title
-          table: node_field_data
-          field: title
+        parent_target_id:
+          id: parent_target_id
+          table: taxonomy_term__parent
+          field: parent_target_id
           relationship: none
           group_type: group
           admin_label: ''
-          operator: word
-          value: ''
+          operator: '='
+          value:
+            min: ''
+            max: ''
+            value: ''
           group: 1
-          exposed: true
+          exposed: false
           expose:
-            operator_id: title_op
-            label: 'Title contains'
+            operator_id: ''
+            label: ''
             description: ''
             use_operator: false
-            operator: title_op
-            identifier: title
+            operator: ''
+            identifier: ''
             required: false
             remember: false
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              sitewide_editor: '0'
-              code_editor: '0'
             placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
           is_grouped: false
           group_info:
             label: ''
@@ -181,36 +174,25 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          entity_type: node
-          entity_field: title
-          plugin_id: string
-      sorts:
-        title:
-          id: title
-          table: node_field_data
-          field: title
-          order: ASC
-          entity_type: node
-          entity_field: title
-          plugin_id: standard
-          relationship: none
-          group_type: group
-          admin_label: ''
-          exposed: false
-          expose:
-            label: ''
-      title: Policy
+          entity_type: taxonomy_term
+          entity_field: parent
+          plugin_id: numeric
+      sorts: {  }
+      title: 'Portland Policy Documents'
       header:
-        result:
-          id: result
+        area:
+          id: area
           table: views
-          field: result
+          field: area
           relationship: none
           group_type: group
           admin_label: ''
           empty: false
-          content: '@total policies found'
-          plugin_id: result
+          tokenize: false
+          content:
+            value: "<p>The Portland Policy Documents (PPD) began as a joint initiative of the Mayor's Office and Auditor's Office to capture all City policies and administrative rules in one central location. Ordinance No. 175959, effective in October 2001, created the PPD and directed the Auditor to gather all City policies and rules and publish them on the Internet. City Code Chapter 1.07 governs the PPD.</p>\r\n<p>As documents are filed for inclusion in the PPD, the City Auditor will publish them to this site. View the policies by category or search the policies by keyword and category.</p>"
+            format: full_html
+          plugin_id: text
       footer: {  }
       empty: {  }
       relationships: {  }
@@ -221,26 +203,20 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url
-        - url.query_args
-        - 'user.node_grants:view'
         - user.permissions
       tags: {  }
   page_1:
     display_plugin: page
     id: page_1
     display_title: Page
-    position: 1
+    position: 2
     display_options:
       display_extenders: {  }
-      path: policy
+      path: policies
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url
-        - url.query_args
-        - 'user.node_grants:view'
         - user.permissions
       tags: {  }
