POWR-1088 poc updates to group events view

--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -1578,7 +1578,18 @@ display:
         footer: false
       display_description: ''
       group_by: false
-      header: {  }
+      header:
+        area_text_custom:
+          id: area_text_custom
+          table: views
+          field: area_text_custom
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: true
+          tokenize: false
+          content: "<h4>Test Datepicker</h4>\r\n<div id=\"datepicker-test\"></div>"
+          plugin_id: text_custom
       arguments:
         gid:
           id: gid
