POWR-1432 policy type pattern and view update

--- a/web/sites/default/config/pathauto.pattern.policy.yml
+++ b/web/sites/default/config/pathauto.pattern.policy.yml
@@ -7,16 +7,16 @@ dependencies:
 id: policy
 label: 'Portland Policy Document'
 type: 'canonical_entities:node'
-pattern: 'policies/[node:field_policy_category:entity:parent:field_category_abbreviation]/[node:field_policy_category:entity:field_category_abbreviation]/[node:field_policy_number]'
+pattern: 'policies/[node:field_policy_number]'
 selection_criteria:
-  e6a64192-7195-4554-90c2-02d6e653c714:
+  b5bb237d-b8e7-46f6-81d4-7581f59945bc:
     id: node_type
     bundles:
       policy: policy
     negate: false
     context_mapping:
       node: node
-    uuid: e6a64192-7195-4554-90c2-02d6e653c714
+    uuid: b5bb237d-b8e7-46f6-81d4-7581f59945bc
 selection_logic: and
 weight: -4
 relationships: {  }
