--- a/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-2.yml
+++ b/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-2.yml
@@ -7,6 +7,7 @@ dependencies:
     - views.view.portland_policies_by_category
   module:
     - ctools
+    - ctools_block
     - panels
     - views
 id: taxonomy_term_page-panels_variant-2
@@ -20,7 +21,7 @@ variant_settings:
       provider: core
       label_display: '0'
       region: content
-      weight: 0
+      weight: -1
       uuid: 062a6eae-f646-4208-b9bb-0753e3820b3b
       context_mapping: {  }
     f007c256-28f1-4708-8ae9-e54e7e5ef3d0:
@@ -31,9 +32,26 @@ variant_settings:
       views_label: ''
       items_per_page: none
       region: content
-      weight: 0
+      weight: 1
       uuid: f007c256-28f1-4708-8ae9-e54e7e5ef3d0
       context_mapping: {  }
+    81c05bb9-8a1c-42cf-99a8-c3fc9bb6be3e:
+      id: 'entity_field:taxonomy_term:parent'
+      label: 'Term Parents'
+      provider: ctools_block
+      label_display: '0'
+      formatter:
+        label: hidden
+        type: entity_reference_label
+        settings:
+          link: true
+        third_party_settings: {  }
+        weight: 0
+      region: content
+      weight: 0
+      uuid: 81c05bb9-8a1c-42cf-99a8-c3fc9bb6be3e
+      context_mapping:
+        entity: taxonomy_term
   id: panels_variant
   uuid: ea8c9983-0733-4ed7-a3dc-ecd97ca5adef
   label: null
