--- a/web/sites/default/config/pathauto.pattern.policy_type.yml
+++ b/web/sites/default/config/pathauto.pattern.policy_type.yml
@@ -1,23 +1,23 @@
-uuid: 73256da0-9630-4a5d-8a77-43691a8d4b91
+uuid: 5f6aff09-087a-4bb2-945a-054acceeada3
 langcode: en
 status: true
 dependencies:
   module:
     - ctools
     - taxonomy
-id: policy_category
-label: 'Policy category'
+id: policy_type
+label: 'Policy Type'
 type: 'canonical_entities:taxonomy_term'
 pattern: 'policies/[term:name]'
 selection_criteria:
-  10306937-7f94-43f1-8cc8-a1830f7f9a7d:
+  c019130c-33dd-4ea5-8a94-0137b58bbbfb:
     id: 'entity_bundle:taxonomy_term'
     bundles:
-      policy_category: policy_category
+      policy_type: policy_type
     negate: false
     context_mapping:
       taxonomy_term: taxonomy_term
-    uuid: 10306937-7f94-43f1-8cc8-a1830f7f9a7d
+    uuid: c019130c-33dd-4ea5-8a94-0137b58bbbfb
 selection_logic: and
-weight: -2
+weight: -5
 relationships: {  }
