--- a/web/sites/default/config/views.view.portland_policies_by_category.yml
+++ b/web/sites/default/config/views.view.portland_policies_by_category.yml
@@ -55,7 +55,7 @@ display:
           items_per_page: null
           offset: 0
       style:
-        type: default
+        type: html_list
         options:
           grouping:
             -
@@ -64,6 +64,9 @@ display:
               rendered_strip: false
           row_class: ''
           default_row_class: true
+          type: ul
+          wrapper_class: 'item-list list-unstyled'
+          class: ''
       row:
         type: fields
       fields:
@@ -140,8 +143,8 @@ display:
           label: ''
           exclude: true
           alter:
-            alter_text: false
-            text: ''
+            alter_text: true
+            text: '{% if raw_arguments.term_node_tid_depth != field_policy_category__target_id %}<h2>{{ field_policy_category }}</h2>{% endif %}'
             make_link: false
             path: ''
             absolute: false
@@ -173,15 +176,15 @@ display:
           element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: true
+          element_default_classes: false
           empty: ''
-          hide_empty: false
+          hide_empty: true
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: target_id
           type: entity_reference_label
           settings:
-            link: true
+            link: false
           group_column: target_id
           group_columns: {  }
           group_rows: true
