POWR-1432 search api view and block placement.

--- a/web/sites/default/config/core.entity_view_display.node.policy.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.policy.related.yml
@@ -1,9 +1,9 @@
-uuid: 30f68128-e06f-4560-bb35-d8d6031a6f8b
+uuid: e33b1fff-8c8a-4ba5-8b5a-3c13c2634c0f
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.related
     - field.field.node.policy.field_body_content
     - field.field.node.policy.field_documents
     - field.field.node.policy.field_legacy_path
@@ -15,7 +15,6 @@ dependencies:
   module:
     - ds
     - panelizer
-    - text
     - user
 third_party_settings:
   panelizer:
@@ -42,7 +41,6 @@ third_party_settings:
     regions:
       second:
         - node_title
-        - field_body_content
     fields:
       node_title:
         plugin_id: node_title
@@ -59,28 +57,14 @@ third_party_settings:
             lb: ''
             lb-col: false
             classes: {  }
-id: node.policy.teaser
+id: node.policy.related
 targetEntityType: node
 bundle: policy
-mode: teaser
-content:
-  field_body_content:
-    type: text_trimmed
-    weight: 1
-    region: second
-    label: hidden
-    settings:
-      trim_length: 300
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
+mode: related
+content: {  }
 hidden:
   content_moderation_control: true
+  field_body_content: true
   field_documents: true
   field_legacy_path: true
   field_policy_category: true
