--- a/web/sites/default/config/views.view.portland_policies_search.yml
+++ b/web/sites/default/config/views.view.portland_policies_search.yml
@@ -38,11 +38,11 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: Apply
+          submit_button: 'Search policies'
           reset_button: false
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
-          expose_sort_order: true
+          expose_sort_order: false
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
@@ -286,7 +286,7 @@ display:
           expose:
             label: ''
           plugin_id: search_api
-      title: 'Portland Policies by Category'
+      title: 'Portland Policy Search'
       header:
         result:
           id: result
@@ -334,6 +334,11 @@ display:
       display_extenders: {  }
       path: policies/search
       exposed_block: true
+      cache:
+        type: search_api_tag
+        options: {  }
+      defaults:
+        cache: false
     cache_metadata:
       max-age: -1
       contexts:
