--- a/web/sites/default/config/core.entity_view_display.node.policy.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.policy.search_result.yml
@@ -1,9 +1,9 @@
-uuid: 30f68128-e06f-4560-bb35-d8d6031a6f8b
+uuid: 2d5e4141-6f15-46fa-87bb-c21a135d2960
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.search_result
     - field.field.node.policy.field_body_content
     - field.field.node.policy.field_documents
     - field.field.node.policy.field_legacy_path
@@ -15,7 +15,6 @@ dependencies:
   module:
     - ds
     - panelizer
-    - text
     - user
 third_party_settings:
   panelizer:
@@ -41,51 +40,72 @@ third_party_settings:
           layout_class: {  }
     regions:
       second:
+        - field_policy_type
         - node_title
-        - field_body_content
     fields:
       node_title:
         plugin_id: node_title
-        weight: 0
+        weight: 1
         label: hidden
         formatter: default
         settings:
+          link: true
           wrapper: h3
           class: ''
-          link: false
         ft:
           id: default
           settings:
             lb: ''
             lb-col: false
             classes: {  }
-id: node.policy.teaser
+id: node.policy.search_result
 targetEntityType: node
 bundle: policy
-mode: teaser
+mode: search_result
 content:
-  field_body_content:
-    type: text_trimmed
-    weight: 1
+  field_policy_type:
+    type: entity_reference_label
+    weight: 0
     region: second
     label: hidden
     settings:
-      trim_length: 300
+      link: false
     third_party_settings:
       ds:
         ft:
-          id: default
+          id: expert
           settings:
             lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: div
+            fi-cl: 'badge badge-pill badge-light'
+            fi-at: ''
+            suffix: ''
+            lbw: false
             lb-col: false
-            classes: {  }
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
 hidden:
   content_moderation_control: true
+  field_body_content: true
   field_documents: true
   field_legacy_path: true
   field_policy_category: true
   field_policy_number: true
-  field_policy_type: true
   field_reviewer: true
   group_content: true
   links: true
