--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -22,6 +22,7 @@ dependencies:
     - field.storage.node.field_end_date
     - field.storage.node.field_end_time
     - field.storage.node.field_policy_category
+    - field.storage.node.field_policy_type
     - field.storage.node.field_popular
     - field.storage.node.field_published_on
     - field.storage.node.field_search_keywords
@@ -177,6 +178,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_policy_category
+  field_policy_type:
+    label: 'Policy type'
+    datasource_id: 'entity:node'
+    property_path: field_policy_type
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_policy_type
   field_popular:
     label: Popular
     datasource_id: 'entity:node'
@@ -402,6 +411,11 @@ processor_settings:
   add_url: {  }
   aggregated_field: {  }
   entity_status: {  }
+  hierarchy:
+    fields:
+      field_policy_category: taxonomy_term-parent
+    weights:
+      preprocess_index: -45
   html_filter:
     all_fields: true
     fields:
@@ -411,6 +425,7 @@ processor_settings:
       - field_official_organization_name
       - field_official_title
       - field_policy_category
+      - field_policy_type
       - field_search_keywords
       - field_shortname_or_acronym
       - field_summary
@@ -471,8 +486,6 @@ processor_settings:
         datasource_boost: !!float 3
         bundle_boosts:
           audience: !!float 1
-          community_actions: !!float 1
-          topics: !!float 8
     weights:
       preprocess_index: 0
 tracker_settings:
