--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -139,7 +139,7 @@ content:
     type: datetime_default
     weight: 3
     region: content
-    label: hidden
+    label: inline
     settings:
       timezone_override: ''
       format_type: month_day_year
