--- a/web/sites/default/config/core.entity_view_display.node.news.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.teaser.yml
@@ -94,7 +94,7 @@ content:
     type: datetime_default
     weight: 2
     region: second
-    label: hidden
+    label: inline
     settings:
       timezone_override: ''
       format_type: month_day_year
