--- a/web/modules/custom/portland/portland.services.yml
+++ b/web/modules/custom/portland/portland.services.yml
@@ -18,4 +18,8 @@ services:
     class: Drupal\portland\FileIconExtension
     tags:
       - { name: twig.extension }
-      
+
+  portland.file_headers_subscriber:
+    class: Drupal\portland\EventSubscriber\FileHeadersSubscriber
+    tags:
+      - { name: event_subscriber }
