--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -28,7 +28,6 @@ dependencies:
     - field.field.group.project.field_topics
     - group.type.project
   module:
-    - address
     - datetime
     - ds
     - field_group
@@ -48,6 +47,7 @@ third_party_settings:
         - group_site_menu_entity_view_1
         - field_featured_content
         - field_display_date
+        - field_featured_groups
         - field_start_date
         - field_end_date
   field_group:
@@ -76,13 +76,6 @@ targetEntityType: group
 bundle: project
 mode: default
 content:
-  field_address:
-    weight: 21
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: address_default
-    region: content
   field_display_date:
     weight: 5
     label: hidden
@@ -90,13 +83,6 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
-    region: content
-  field_email:
-    weight: 23
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: basic_string
     region: content
   field_end_date:
     type: datetime_default
@@ -131,6 +117,23 @@ content:
             classes: {  }
     type: entity_reference_entity_view
     region: content
+  field_featured_groups:
+    type: entity_reference_entity_view
+    weight: 5
+    region: content
+    label: above
+    settings:
+      view_mode: featured
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: 'Related Programs and Projects'
+            lb-col: false
+            classes: {  }
   field_featured_media:
     weight: 0
     label: hidden
@@ -167,13 +170,6 @@ content:
             fi: false
             fi-def-at: false
     type: entity_reference_entity_view
-    region: content
-  field_phone:
-    weight: 22
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: basic_string
     region: content
   field_start_date:
     weight: 6
@@ -235,15 +231,17 @@ content:
 hidden:
   changed: true
   created: true
+  field_address: true
   field_audience: true
+  field_email: true
   field_enable_documents_menu_item: true
   field_enable_events_menu_item: true
   field_enable_guides_and_informat: true
   field_enable_news_and_notices_me: true
   field_enable_projects_menu_item: true
-  field_featured_groups: true
   field_legacy_path: true
   field_parent_group: true
+  field_phone: true
   field_project_status: true
   field_project_type: true
   field_search_keywords: true
