--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.group.project.field_address
     - field.field.group.project.field_audience
     - field.field.group.project.field_display_date
+    - field.field.group.project.field_display_date_toggle
     - field.field.group.project.field_email
     - field.field.group.project.field_enable_documents_menu_item
     - field.field.group.project.field_enable_events_menu_item
@@ -28,7 +29,6 @@ dependencies:
     - field.field.group.project.field_topics
     - group.type.project
   module:
-    - address
     - datetime
     - ds
     - field_group
@@ -43,21 +43,23 @@ third_party_settings:
     regions:
       content:
         - field_featured_media
+        - field_display_date_toggle
         - group_date
-        - field_summary
-        - group_site_menu_entity_view_1
-        - field_featured_content
         - field_display_date
+        - field_summary
         - field_start_date
+        - group_site_menu_entity_view_1
         - field_end_date
+        - field_featured_content
   field_group:
     group_date:
       children:
+        - field_display_date_toggle
         - field_display_date
         - field_start_date
         - field_end_date
       parent_name: ''
-      weight: 1
+      weight: 2
       format_type: html_element
       format_settings:
         id: ''
@@ -76,31 +78,34 @@ targetEntityType: group
 bundle: project
 mode: default
 content:
-  field_address:
-    weight: 21
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: address_default
-    region: content
   field_display_date:
-    weight: 5
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
-  field_email:
-    weight: 23
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: basic_string
+  field_display_date_toggle:
+    weight: 1
+    label: hidden
+    settings:
+      format: boolean
+      format_custom_true: ''
+      format_custom_false: ''
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: boolean
     region: content
   field_end_date:
     type: datetime_default
-    weight: 7
+    weight: 4
     region: content
     label: hidden
     settings:
@@ -115,7 +120,7 @@ content:
             lb-col: false
             classes: {  }
   field_featured_content:
-    weight: 4
+    weight: 5
     label: above
     settings:
       view_mode: featured
@@ -168,15 +173,8 @@ content:
             fi-def-at: false
     type: entity_reference_entity_view
     region: content
-  field_phone:
-    weight: 22
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: basic_string
-    region: content
   field_start_date:
-    weight: 6
+    weight: 3
     label: hidden
     settings:
       timezone_override: ''
@@ -192,7 +190,7 @@ content:
     type: datetime_default
     region: content
   field_summary:
-    weight: 2
+    weight: 3
     label: hidden
     settings:
       link_to_entity: false
@@ -228,14 +226,16 @@ content:
     type: string
     region: content
   group_site_menu_entity_view_1:
-    weight: 3
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   changed: true
   created: true
+  field_address: true
   field_audience: true
+  field_email: true
   field_enable_documents_menu_item: true
   field_enable_events_menu_item: true
   field_enable_guides_and_informat: true
@@ -244,6 +244,7 @@ hidden:
   field_featured_groups: true
   field_legacy_path: true
   field_parent_group: true
+  field_phone: true
   field_project_status: true
   field_project_type: true
   field_search_keywords: true
