--- a/web/sites/default/config/block.block.views_block__group_events_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__group_events_block_1.yml
@@ -28,10 +28,11 @@ visibility:
   group_type:
     id: group_type
     group_types:
-      project: project
+      advisory_group: advisory_group
       bureau_office: bureau_office
       elected_official: elected_official
       program: program
+      project: project
     negate: false
     context_mapping:
       group: '@group.group_route_context:group'
