--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -3356,7 +3356,7 @@ display:
           operator: between
           value:
             min: '-1 year'
-            max: today
+            max: yesterday
             value: today
             type: date
           group: 1
