POWR-1095 Add embedded view for pages for projects

--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -49,12 +49,12 @@ third_party_settings:
         - field_summary
         - group_site_menu_entity_view_1
         - field_body_content
-        - field_display_date
         - field_embedded_page
-        - field_start_date
+        - field_display_date
         - field_featured_content
-        - field_end_date
+        - field_start_date
         - field_featured_groups
+        - field_end_date
   field_group:
     group_date:
       children:
@@ -102,7 +102,7 @@ content:
     region: content
     label: hidden
     settings:
-      view_mode: default
+      view_mode: embedded
       link: false
     third_party_settings:
       ds:
