--- a/web/sites/default/config/workflows.workflow.editorial_default_published.yml
+++ b/web/sites/default/config/workflows.workflow.editorial_default_published.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - node.type.calendar_item
     - node.type.location
   module:
     - content_moderation
@@ -74,5 +75,6 @@ type_settings:
       weight: 2
   entity_types:
     node:
+      - calendar_item
       - location
   default_moderation_state: published
