--- a/web/sites/default/config/group.role.elected_official-admin.yml
+++ b/web/sites/default/config/group.role.elected_official-admin.yml
@@ -20,6 +20,7 @@ permissions:
   - 'create group_media:image entity'
   - 'create group_media:map entity'
   - 'create group_media:video entity'
+  - 'create group_node:calendar_item entity'
   - 'create group_node:event entity'
   - 'create group_node:news entity'
   - 'create group_node:notification entity'
@@ -34,6 +35,8 @@ permissions:
   - 'delete any group_media:map entity'
   - 'delete any group_media:video content'
   - 'delete any group_media:video entity'
+  - 'delete any group_node:calendar_item content'
+  - 'delete any group_node:calendar_item entity'
   - 'delete any group_node:event content'
   - 'delete any group_node:event entity'
   - 'delete any group_node:news content'
@@ -52,6 +55,8 @@ permissions:
   - 'delete own group_media:map entity'
   - 'delete own group_media:video content'
   - 'delete own group_media:video entity'
+  - 'delete own group_node:calendar_item content'
+  - 'delete own group_node:calendar_item entity'
   - 'delete own group_node:event content'
   - 'delete own group_node:event entity'
   - 'delete own group_node:news content'
@@ -72,6 +77,8 @@ permissions:
   - 'update any group_media:map entity'
   - 'update any group_media:video content'
   - 'update any group_media:video entity'
+  - 'update any group_node:calendar_item content'
+  - 'update any group_node:calendar_item entity'
   - 'update any group_node:event content'
   - 'update any group_node:event entity'
   - 'update any group_node:news content'
@@ -91,6 +98,8 @@ permissions:
   - 'update own group_media:video content'
   - 'update own group_media:video entity'
   - 'update own group_membership content'
+  - 'update own group_node:calendar_item content'
+  - 'update own group_node:calendar_item entity'
   - 'update own group_node:event content'
   - 'update own group_node:event entity'
   - 'update own group_node:news content'
@@ -111,6 +120,8 @@ permissions:
   - 'view group_media:video content'
   - 'view group_media:video entity'
   - 'view group_membership content'
+  - 'view group_node:calendar_item content'
+  - 'view group_node:calendar_item entity'
   - 'view group_node:event content'
   - 'view group_node:event entity'
   - 'view group_node:guide entity'
@@ -126,6 +137,7 @@ permissions:
   - 'view unpublished group_media:image entity'
   - 'view unpublished group_media:map entity'
   - 'view unpublished group_media:video entity'
+  - 'view unpublished group_node:calendar_item entity'
   - 'view unpublished group_node:event entity'
   - 'view unpublished group_node:news entity'
   - 'view unpublished group_node:notification entity'
