--- a/web/sites/default/config/group.role.elected_official-anonymous.yml
+++ b/web/sites/default/config/group.role.elected_official-anonymous.yml
@@ -18,6 +18,7 @@ permissions:
   - 'view group_media:image entity'
   - 'view group_media:map entity'
   - 'view group_media:video entity'
+  - 'view group_node:calendar_item entity'
   - 'view group_node:event entity'
   - 'view group_node:guide entity'
   - 'view group_node:information entity'
