--- a/web/sites/default/config/group.role.elected_official-editor.yml
+++ b/web/sites/default/config/group.role.elected_official-editor.yml
@@ -19,6 +19,7 @@ permissions:
   - 'create group_media:image entity'
   - 'create group_media:map entity'
   - 'create group_media:video entity'
+  - 'create group_node:calendar_item entity'
   - 'create group_node:event entity'
   - 'create group_node:news entity'
   - 'create group_node:page entity'
@@ -27,6 +28,7 @@ permissions:
   - 'delete own group_media:image entity'
   - 'delete own group_media:map entity'
   - 'delete own group_media:video entity'
+  - 'delete own group_node:calendar_item entity'
   - 'delete own group_node:event entity'
   - 'delete own group_node:news entity'
   - 'delete own group_node:notification entity'
@@ -37,6 +39,7 @@ permissions:
   - 'update any group_media:image entity'
   - 'update any group_media:map entity'
   - 'update any group_media:video entity'
+  - 'update any group_node:calendar_item entity'
   - 'update any group_node:event entity'
   - 'update any group_node:news entity'
   - 'update any group_node:notification entity'
@@ -46,6 +49,7 @@ permissions:
   - 'update own group_media:image entity'
   - 'update own group_media:map entity'
   - 'update own group_media:video entity'
+  - 'update own group_node:calendar_item entity'
   - 'update own group_node:event entity'
   - 'update own group_node:news entity'
   - 'update own group_node:notification entity'
@@ -56,6 +60,7 @@ permissions:
   - 'view group_media:image entity'
   - 'view group_media:map entity'
   - 'view group_media:video entity'
+  - 'view group_node:calendar_item entity'
   - 'view group_node:event entity'
   - 'view group_node:news entity'
   - 'view group_node:notification entity'
@@ -65,6 +70,7 @@ permissions:
   - 'view unpublished group_media:image entity'
   - 'view unpublished group_media:map entity'
   - 'view unpublished group_media:video entity'
+  - 'view unpublished group_node:calendar_item entity'
   - 'view unpublished group_node:event entity'
   - 'view unpublished group_node:news entity'
   - 'view unpublished group_node:notification entity'
