--- a/web/sites/default/config/group.role.elected_official-member.yml
+++ b/web/sites/default/config/group.role.elected_official-member.yml
@@ -21,6 +21,7 @@ permissions:
   - 'view group_media:image entity'
   - 'view group_media:map entity'
   - 'view group_media:video entity'
+  - 'view group_node:calendar_item entity'
   - 'view group_node:event entity'
   - 'view group_node:guide entity'
   - 'view group_node:information entity'
@@ -32,6 +33,7 @@ permissions:
   - 'view unpublished group_media:image entity'
   - 'view unpublished group_media:map entity'
   - 'view unpublished group_media:video entity'
+  - 'view unpublished group_node:calendar_item entity'
   - 'view unpublished group_node:event entity'
   - 'view unpublished group_node:news entity'
   - 'view unpublished group_node:notification entity'
