POWR-1455 further integration of calendar item, new view, updates to pathauto, etc.

--- a/web/sites/default/config/views.view.group_nodes.yml
+++ b/web/sites/default/config/views.view.group_nodes.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_reviewer
+    - node.type.calendar_item
     - node.type.city_service
     - node.type.event
     - node.type.news
@@ -1040,6 +1041,7 @@ display:
           admin_label: ''
           operator: in
           value:
+            calendar_item: calendar_item
             event: event
             news: news
             notification: notification
@@ -1065,6 +1067,7 @@ display:
               code_editor: '0'
               council_clerk: '0'
               group_creator: '0'
+              park_editor: '0'
             reduce: true
             argument: ''
           is_grouped: false
