POWR-1455 display calendar archive exposed filters, tweak filter labels

--- a/web/sites/default/config/views.view.group_calendar_archive.yml
+++ b/web/sites/default/config/views.view.group_calendar_archive.yml
@@ -1716,7 +1716,7 @@ display:
           exposed: true
           expose:
             operator_id: combine_op
-            label: 'Search events'
+            label: 'Search calendar archive'
             description: ''
             use_operator: false
             operator: combine_op
