POWR-1352 Remove extra display modes for Park facility

--- a/web/sites/default/config/core.entity_view_display.node.park_facility.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.park_facility.teaser.yml
@@ -1,6 +1,6 @@
 uuid: cececafc-6b88-4cb8-a0b9-5b89ef7b9d45
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
@@ -27,7 +27,6 @@ dependencies:
     - field.field.node.park_facility.field_size_in_acres
     - field.field.node.park_facility.field_twitter
     - field.field.node.park_facility.field_year_acquired
-    - field.field.node.park_facility.panelizer
     - node.type.park_facility
   module:
     - panelizer
@@ -89,4 +88,3 @@ hidden:
   field_year_acquired: true
   group_content: true
   links: true
-  panelizer: true
