POWR-1455 updates to calendar item displays, incomplete but committing work in progress to switch to different story/branch

--- a/web/sites/default/config/core.entity_view_display.node.calendar_item.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.calendar_item.search_result.yml
@@ -1,8 +1,9 @@
-uuid: d7d43c80-e792-4a00-9424-b99abe0406a4
+uuid: c30f6beb-184e-4d55-8779-10d48703b235
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.search_result
     - field.field.node.calendar_item.body
     - field.field.node.calendar_item.field_all_day
     - field.field.node.calendar_item.field_calendar_item_location
@@ -16,12 +17,41 @@ dependencies:
     - node.type.calendar_item
   module:
     - datetime
+    - ds
+    - panelizer
+    - text
     - time_field
     - user
-id: node.calendar_item.default
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      content:
+        - group_content
+        - field_reviewer
+        - body
+        - field_calendar_item_type
+        - field_start_date
+        - field_start_time
+        - field_all_day
+        - field_end_date
+        - field_end_time
+        - field_calendar_item_location
+        - field_participants
+id: node.calendar_item.search_result
 targetEntityType: node
 bundle: calendar_item
-mode: default
+mode: search_result
 content:
   body:
     type: text_trimmed
