--- a/web/sites/default/config/core.entity_form_display.node.calendar_item.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.calendar_item.default.yml
@@ -10,13 +10,16 @@ dependencies:
     - field.field.node.calendar_item.field_end_date
     - field.field.node.calendar_item.field_end_time
     - field.field.node.calendar_item.field_participants
+    - field.field.node.calendar_item.field_reviewer
     - field.field.node.calendar_item.field_start_date
     - field.field.node.calendar_item.field_start_time
     - node.type.calendar_item
+    - workflows.workflow.editorial_default_published
   module:
     - bootstrap_datepicker
     - chosen_field
     - conditional_fields
+    - content_moderation
     - field_group
     - time_field
 third_party_settings:
@@ -178,6 +181,15 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_reviewer:
+    weight: 8
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
   field_start_date:
     weight: 3
     settings:
@@ -261,6 +273,12 @@ content:
           bundle: calendar_item
     type: time_widget
     region: content
+  moderation_state:
+    type: moderation_state_default
+    weight: 9
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
@@ -280,7 +298,6 @@ hidden:
   body: true
   created: true
   group_content: true
-  moderation_state: true
   path: true
   promote: true
   sticky: true
