POWR-1088 changes to events views suggested in QA; remove dates from search forms

--- a/web/sites/default/config/block.block.exposedformevents_indexpage_3.yml
+++ b/web/sites/default/config/block.block.exposedformevents_indexpage_3.yml
@@ -1,4 +1,4 @@
-uuid: a1b8989a-17cd-46fb-bee5-6a3ed3fcb06c
+uuid: 13a17fe1-9786-4051-b715-dcc1e0c9c865
 langcode: en
 status: true
 dependencies:
@@ -19,7 +19,7 @@ settings:
   id: 'views_exposed_filter_block:events_index-page_3'
   label: ''
   provider: views
-  label_display: visible
+  label_display: '0'
   views_label: ''
 visibility:
   request_path:
