--- a/web/sites/default/config/views.view.events_index.yml
+++ b/web/sites/default/config/views.view.events_index.yml
@@ -312,7 +312,7 @@ display:
           expose:
             label: ''
           plugin_id: search_api
-      title: Events
+      title: 'Upcoming events'
       header:
         result:
           id: result
@@ -356,7 +356,7 @@ display:
   page_1:
     display_plugin: page
     id: page_1
-    display_title: Events
+    display_title: 'Page: Upcoming events'
     position: 1
     display_options:
       display_extenders: {  }
@@ -443,7 +443,7 @@ display:
           exposed: true
           expose:
             operator_id: ''
-            label: 'Search events'
+            label: 'Search upcoming events'
             description: ''
             use_operator: true
             operator: search_api_fulltext_op
@@ -457,6 +457,9 @@ display:
               administrator: '0'
               sitewide_editor: '0'
               code_editor: '0'
+              council_clerk: '0'
+              group_creator: '0'
+              park_editor: '0'
             placeholder: ''
           is_grouped: false
           group_info:
@@ -483,14 +486,14 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: between
+          operator: '>='
           value:
             min: today
             max: '+30 days'
-            value: ''
+            value: today
             type: date
-          group: 1
-          exposed: true
+          group: 2
+          exposed: false
           expose:
             operator_id: field_start_date_1_op
             label: 'Date between'
@@ -526,10 +529,54 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: search_api_date
+        field_end_date:
+          id: field_end_date
+          table: search_api_index_full_index
+          field: field_end_date
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '>='
+          value:
+            min: ''
+            max: ''
+            value: today
+            type: date
+          group: 2
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: search_api_date
       filter_groups:
         operator: AND
         groups:
           1: AND
+          2: OR
     cache_metadata:
       max-age: -1
       contexts:
@@ -540,7 +587,7 @@ display:
   page_3:
     display_plugin: page
     id: page_3
-    display_title: 'Recent events'
+    display_title: 'Page: Recent events'
     position: 1
     display_options:
       display_extenders: {  }
@@ -574,6 +621,7 @@ display:
         filters: false
         filter_groups: false
         sorts: false
+        title: false
       exposed_block: true
       filters:
         type_2:
@@ -628,7 +676,7 @@ display:
           exposed: true
           expose:
             operator_id: ''
-            label: 'Search events'
+            label: 'Search recent events'
             description: ''
             use_operator: true
             operator: search_api_fulltext_op
@@ -642,6 +690,9 @@ display:
               administrator: '0'
               sitewide_editor: '0'
               code_editor: '0'
+              council_clerk: '0'
+              group_creator: '0'
+              park_editor: '0'
             placeholder: ''
           is_grouped: false
           group_info:
@@ -668,14 +719,14 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: between
+          operator: '<='
           value:
             min: '-1 year'
             max: yesterday
-            value: ''
+            value: today
             type: date
-          group: 1
-          exposed: true
+          group: 2
+          exposed: false
           expose:
             operator_id: field_start_date_1_op
             label: 'Date between'
@@ -711,10 +762,54 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: search_api_date
+        field_end_date:
+          id: field_end_date
+          table: search_api_index_full_index
+          field: field_end_date
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '<='
+          value:
+            min: ''
+            max: ''
+            value: today
+            type: date
+          group: 2
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: search_api_date
       filter_groups:
         operator: AND
         groups:
           1: AND
+          2: OR
       sorts:
         field_start_date:
           id: field_start_date
@@ -740,6 +835,7 @@ display:
           expose:
             label: ''
           plugin_id: search_api
+      title: 'Recent events'
     cache_metadata:
       max-age: -1
       contexts:
