--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -11,7 +11,6 @@ dependencies:
     - field.storage.node.field_start_date
     - field.storage.node.field_start_time
     - field.storage.node.field_summary
-    - node.type.event
   module:
     - datetime
     - group
@@ -720,58 +719,6 @@ display:
           field_api_classes: false
           plugin_id: field
       filters:
-        status:
-          value: '1'
-          table: node_field_data
-          field: status
-          plugin_id: boolean
-          entity_type: node
-          entity_field: status
-          id: status
-          expose:
-            operator: ''
-          group: 1
-        type:
-          id: type
-          table: node_field_data
-          field: type
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: in
-          value:
-            event: event
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-            argument: null
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: node
-          entity_field: type
-          plugin_id: bundle
         combine:
           id: combine
           table: views
@@ -785,11 +732,11 @@ display:
           exposed: true
           expose:
             operator_id: combine_op
-            label: 'Search events'
+            label: 'Search upcoming events'
             description: ''
             use_operator: false
             operator: combine_op
-            identifier: combine
+            identifier: search
             required: false
             remember: false
             multiple: false
@@ -828,14 +775,14 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: between
+          operator: '>='
           value:
             min: today
             max: '+30 days'
             value: today
             type: date
-          group: 1
-          exposed: true
+          group: 2
+          exposed: false
           expose:
             operator_id: field_start_date_value_op
             label: 'Date between'
@@ -855,6 +802,49 @@ display:
               council_clerk: '0'
               group_creator: '0'
               park_editor: '0'
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: datetime
+        field_end_date_value:
+          id: field_end_date_value
+          table: node__field_end_date
+          field: field_end_date_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '>='
+          value:
+            min: ''
+            max: ''
+            value: today
+            type: date
+          group: 2
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
             placeholder: ''
             min_placeholder: ''
             max_placeholder: ''
@@ -1002,6 +992,7 @@ display:
         operator: AND
         groups:
           1: AND
+          2: OR
       link_url: ''
       link_display: page_1
     cache_metadata:
@@ -1027,7 +1018,7 @@ display:
   block_1:
     display_plugin: block
     id: block_1
-    display_title: 'Block: upcoming'
+    display_title: 'Block: Upcoming 5'
     position: 2
     display_options:
       display_extenders: {  }
@@ -1621,54 +1612,6 @@ display:
           plugin_id: custom
       empty: {  }
       filters:
-        type:
-          id: type
-          table: node_field_data
-          field: type
-          value:
-            event: event
-          entity_type: node
-          entity_field: type
-          plugin_id: bundle
-          group: 1
-        status:
-          id: status
-          table: node_field_data
-          field: status
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '='
-          value: '1'
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: node
-          entity_field: status
-          plugin_id: boolean
         field_start_date_value:
           id: field_start_date_value
           table: node__field_start_date
@@ -1716,10 +1659,53 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: datetime
+        field_end_date_value:
+          id: field_end_date_value
+          table: node__field_end_date
+          field: field_end_date_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '>='
+          value:
+            min: ''
+            max: ''
+            value: today
+            type: date
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: datetime
       filter_groups:
         operator: AND
         groups:
-          1: AND
+          1: OR
     cache_metadata:
       max-age: -1
       contexts:
@@ -1740,7 +1726,7 @@ display:
   page_1:
     display_plugin: page
     id: page_1
-    display_title: 'Page: events list'
+    display_title: 'Page: Upcoming events'
     position: 1
     display_options:
       display_extenders: {  }
@@ -1805,7 +1791,7 @@ display:
           entity_type: group_content
           entity_field: gid
           plugin_id: group_id
-      title: Events
+      title: 'Upcoming events'
       footer: {  }
       fields:
         field_end_date:
@@ -2519,7 +2505,7 @@ display:
   page_2:
     display_plugin: page
     id: page_2
-    display_title: 'Page: recent past events list'
+    display_title: 'Page: Recent events'
     position: 1
     display_options:
       display_extenders: {  }
@@ -3239,58 +3225,6 @@ display:
             label: ''
           plugin_id: standard
       filters:
-        status:
-          value: '1'
-          table: node_field_data
-          field: status
-          plugin_id: boolean
-          entity_type: node
-          entity_field: status
-          id: status
-          expose:
-            operator: ''
-          group: 1
-        type:
-          id: type
-          table: node_field_data
-          field: type
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: in
-          value:
-            event: event
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-            argument: null
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: node
-          entity_field: type
-          plugin_id: bundle
         combine:
           id: combine
           table: views
@@ -3304,11 +3238,11 @@ display:
           exposed: true
           expose:
             operator_id: combine_op
-            label: 'Search events'
+            label: 'Search recent events'
             description: ''
             use_operator: false
             operator: combine_op
-            identifier: combine
+            identifier: search
             required: false
             remember: false
             multiple: false
@@ -3347,33 +3281,69 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: between
+          operator: '<='
           value:
-            min: '-1 year'
-            max: yesterday
+            min: ''
+            max: ''
             value: today
             type: date
-          group: 1
-          exposed: true
+          group: 2
+          exposed: false
           expose:
-            operator_id: field_start_date_value_op
-            label: 'Date between'
+            operator_id: ''
+            label: ''
             description: ''
             use_operator: false
-            operator: field_start_date_value_op
-            identifier: date
+            operator: ''
+            identifier: ''
             required: false
             remember: false
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              sitewide_editor: '0'
-              code_editor: '0'
-              council_clerk: '0'
-              group_creator: '0'
-              park_editor: '0'
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: datetime
+        field_end_date_value:
+          id: field_end_date_value
+          table: node__field_end_date
+          field: field_end_date_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '<='
+          value:
+            min: ''
+            max: ''
+            value: today
+            type: date
+          group: 2
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
             placeholder: ''
             min_placeholder: ''
             max_placeholder: ''
@@ -3394,6 +3364,7 @@ display:
         operator: AND
         groups:
           1: AND
+          2: OR
     cache_metadata:
       max-age: -1
       contexts:
