POWR-1350 update the search api page to include calendar item search results

--- a/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
+++ b/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
@@ -26,6 +26,7 @@ view_mode_configuration:
   'entity:group_elected_official': search_result
   'entity:group_program': search_result
   'entity:group_project': search_result
+  'entity:node_calendar_item': search_result
   'entity:node_charter_article': search_result
   'entity:node_charter_chapter': search_result
   'entity:node_charter_section': search_result
@@ -44,6 +45,4 @@ view_mode_configuration:
   'entity:node_park_facility': search_result
   'entity:node_policy': search_result
   'entity:taxonomy_term_audience': search_result
-  'entity:taxonomy_term_community_actions': search_result
-  'entity:taxonomy_term_topics': search_result
 show_search_form: false
